# fpl-tool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  foobarPlaylistTool.cpp
fplTool/: CMakeLists.txt  CommandQueue.cpp  CommandQueue.h  FoobarPlaylist.cpp  FoobarPlaylist.h  Log.h  MediaEntry.cpp  MediaEntry.h  Util.h  fplTool.cpp
